--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
-cmake_minimum_required(VERSION 3.9)
+cmake_minimum_required(VERSION 3.7)
 project(PathGL)
 
 set(CMAKE_CXX_STANDARD 11)
 
 add_executable(PathGL
-        main.cpp
-        Application.cpp Application.hpp
-        include/GL/gl3w.c Config.hpp Camera.cpp Camera.hpp)
+		main.cpp
+		Application.cpp Application.hpp Config.hpp Camera.cpp Camera.hpp
+		include/GL/gl3w.c)
 
 add_definitions(-DSTB_IMAGE_WRITE_IMPLEMENTATION)
 include_directories(include/)
