--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 11)
 add_executable(PathGL
 		main.cpp
 		Application.cpp Application.hpp Config.hpp Camera.cpp Camera.hpp
-		include/GL/gl3w.c)
+		include/GL/gl3w.c SceneLoader.cpp SceneLoader.hpp)
 
 add_definitions(-DSTB_IMAGE_WRITE_IMPLEMENTATION)
 include_directories(include/)
