--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ set(CMAKE_CXX_STANDARD 11)
 
 add_executable(PathGL
 		main.cpp
-		Application.cpp Application.hpp Config.hpp Camera.cpp Camera.hpp
-		include/GL/gl3w.c SceneLoader.cpp SceneLoader.hpp)
+		Application.cpp Application.hpp Config.hpp Camera.cpp Camera.hpp SceneLoader.cpp SceneLoader.hpp
+		include/GL/gl3w.c)
 
 add_definitions(-DSTB_IMAGE_WRITE_IMPLEMENTATION)
 include_directories(include/)
